Faz correcoes sugeridas pelo orientador

--- a/apresentacao/bib/bibliografia.bib
+++ b/apresentacao/bib/bibliografia.bib
@@ -14,7 +14,8 @@
   title     = {The Stone-Weierstrass theorem},
   month     = {January},
   year      = {2006},
-  publisher = {Queen's University at Kingston}
+  publisher = {Queen's University at Kingston},
+  url       = {https://mast.queensu.ca/~speicher/Section14.pdf},
 }
 
 @article{hilbert,
