--- a/apresentacao/figuras/sigmoid-graph.tex
+++ b/apresentacao/figuras/sigmoid-graph.tex
@@ -3,13 +3,14 @@
         axis x line=middle,
         axis y line=middle,
         yscale=.6,
-        ylabel=\( \sigma ( x ) \),
+        % ylabel=\( \sigma ( x ) \),
+        % y label style={anchor=west},
         ytick={1},
         yticklabels={1},
-        y label style={anchor=west},
         xlabel=\( x \),
         samples=200
     ]
     \addplot[domain=-10:10, blue, thick] {1/(1 + e^(-x))};
+    \addlegendentry{\( \sigma ( x ) \)}
     \end{axis}
 \end{tikzpicture}
