--- a/apresentacao/tex/preamble.tex
+++ b/apresentacao/tex/preamble.tex
@@ -33,6 +33,7 @@
 \usepackage{amsmath, mathtools, mathrsfs, amssymb}
 \usepackage{verbatim}
 \usepackage{pgfplots}
+\usepackage{xcolor}
     \pgfplotsset{compat=1.18}
     \pgfplotsset{lua debug}
 \usepackage{tikz}
@@ -42,10 +43,10 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
+    citecolor=blue,
     linkcolor=blue,
     filecolor=magenta,
     urlcolor=blue,
-    pdftitle={Overleaf Example},
     pdfpagemode=FullScreen,
 }
 
